# kiro2api-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  accounts.example.json  config.example.json  credentials.example.idc.json  credentials.example.social.json
.github/workflows/: build.yaml
src/: debug.rs  http_client.rs  main.rs  token.rs
src/anthropic/: converter.rs  handlers.rs  middleware.rs  mod.rs  router.rs  stream.rs  types.rs
src/kiro/: machine_id.rs  mod.rs  provider.rs  token_manager.rs
src/kiro/model/: credentials.rs  mod.rs  token_refresh.rs
src/kiro/model/common/: mod.rs
src/kiro/model/events/: assistant.rs  base.rs  context_usage.rs  tool_use.rs
src/kiro/model/requests/: conversation.rs  kiro.rs  mod.rs  tool.rs
src/kiro/parser/: crc.rs  decoder.rs  error.rs  frame.rs  header.rs  mod.rs
src/model/: arg.rs  config.rs  mod.rs
src/pool/: account.rs  manager.rs  mod.rs  strategy.rs  usage.rs
src/ui/: index.html  mod.rs
tools/: event-viewer.html
